# yolov5-tensorrt8-ros

Ros-node-yolov5s-deepsort-tensorrt/: CMakeLists.txt  calibrate_file.yaml  package.xml
Ros-node-yolov5s-deepsort-tensorrt/deepsort/src/: deepsort.cpp  featuretensor.cpp
Ros-node-yolov5s-deepsort-tensorrt/include/: ObjectPostprocessor.h  manager.hpp
Ros-node-yolov5s-deepsort-tensorrt/launch/: camera_yolov5s_node.launch
Ros-node-yolov5s-deepsort-tensorrt/src/: ObjectPostprocessor.cpp  main.cpp  manager.cpp
Ros-node-yolov5s-deepsort-tensorrt/yolo/include/: common.hpp  yololayer.cu  yololayer.h  yolov5s_lib.h
Ros-node-yolov5s-deepsort-tensorrt/yolo/src/: yolov5s_lib.cpp
